<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/night_day_mode"
        android:showAsAction="never"
        android:title="@string/night_day_mode_title"/>
    <item
        android:id="@+id/normal_presentation_mode"
        android:showAsAction="never"
        android:title="@string/normal_presentation_mode_title"/>
    <item
        android:id="@+id/export_TXT"
        android:showAsAction="never"
        android:title="@string/export_TXT_option"/>
    <item
        android:id="@+id/show_pick_activity"
        android:showAsAction="never"
        android:title="@string/pick_activity_option"/>
    <item
        android:id="@+id/show_settings"
        android:showAsAction="never"
        android:title="@string/settigs_activity_option"/>

</menu>
