<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SettingsActivity" >

    <LinearLayout
        android:id="@+id/lay_keepScreenOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp" >

        <CheckBox
            android:id="@+id/setting_cb_keepScreenOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_keepScreenOn" />

        <TextView
            android:id="@+id/setting_summ_keepScreenOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_keepScreenOn_summ"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_fontSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingTop="10dp" >

        <LinearLayout
            android:id="@+id/lay_fontSize_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/setting_tv_fontSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_fontSize"
                android:textSize="16sp" />

            <Button
                android:id="@+id/setting_buttonFontSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/setting_summ_fontSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_fontSize_summ"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</LinearLayout>